--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: FallenKingdom
 author: Syrows
 version: 0.0.1
-main: com.github.syr0ws.fk.FallenKingdom
+main: com.github.syr0ws.fallenkingdom.FallenKingdomPlugin
 commands:
   pvp:
     description: "A command to enable or disable pvp in a game."
