Adding fk command.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,28 +4,38 @@
 ###                MESSAGES               ###
 #############################################
 
-# This section is about the '/pvp' command.
-command-pvp:
+# This section is about the '/fk' command.
+command-fk:
   # Message sent to the sender when he doesn't have the permission to execute the command.
   no-permission: "&c>> Vous n'avez pas la permission d'utiliser cette commande."
-  # Message sent to the sender when he's trying to enable / disable pvp when no game is running.
-  game-not-running: "&c>> La partie n'a pas encore commencé."
-  # Message sent to the sender when he's trying to enable pvp when it already is.
-  already-enabled: "&c>> Le pvp est déjà activé."
-  # Message sent to the sender when he's trying to disable pvp when it already is.
-  already-disabled: "&c>> Le pvp est déjà désactivé."
-
-
-# This section is about the '/assaults' command.
-command-assaults:
-  # Message sent when the sender doesn't have the permission to execute the command.
-  no-permission: "&c>> Vous n'avez pas la permission d'utiliser cette commande."
-  # Message sent to the sender when he's trying to enable / disable assaults when no game is running.
-  game-not-running: "&c>> La partie n'a pas encore commencé."
-  # Message sent to the sender when he's trying to enable assaults when they already are.
-  already-enabled: "&c>> Les assaults sont déjà activés."
-  # Message sent to the sender when he's trying to disable assaults when they already are.
-  already-disabled: "&c>> Les assaults sont déjà désactivés."
+  # This section is about the '/fk start' command.
+  start:
+    # Message sent to the sender when he doesn't have the permission to execute the command.
+    no-permission: "&c>> Vous n'avez pas la permission d'utiliser cette commande."
+  # This section is about the '/fk stop' command.
+  stop:
+    # Message sent to the sender when he doesn't have the permission to execute the command.
+    no-permission: "&c>> Vous n'avez pas la permission d'utiliser cette commande."
+  # This section is about the '/fk pvp' command.
+  pvp:
+    # Message sent to the sender when he doesn't have the permission to execute the command.
+    no-permission: "&c>> Vous n'avez pas la permission d'utiliser cette commande."
+    # Message sent to the sender when he's trying to enable / disable pvp when no game is running.
+    game-not-running: "&c>> La partie n'a pas encore commencé."
+    # Message sent to the sender when he's trying to enable pvp when it already is.
+    already-enabled: "&c>> Le pvp est déjà activé."
+    # Message sent to the sender when he's trying to disable pvp when it already is.
+    already-disabled: "&c>> Le pvp est déjà désactivé."
+  # This section is about the '/fk assaults' command.
+  assaults:
+    # Message sent when the sender doesn't have the permission to execute the command.
+    no-permission: "&c>> Vous n'avez pas la permission d'utiliser cette commande."
+    # Message sent to the sender when he's trying to enable / disable assaults when no game is running.
+    game-not-running: "&c>> La partie n'a pas encore commencé."
+    # Message sent to the sender when he's trying to enable assaults when they already are.
+    already-enabled: "&c>> Les assaults sont déjà activés."
+    # Message sent to the sender when he's trying to disable assaults when they already are.
+    already-disabled: "&c>> Les assaults sont déjà désactivés."
 
 
 # This section is about the pvp.
