--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,6 @@ author: Syrows
 version: 0.0.1
 main: com.github.syr0ws.fallenkingdom.FallenKingdomPlugin
 commands:
-  pvp:
-    description: "A command to enable or disable pvp in a game."
-  assaults:
-    description: "A command to enable or disable assaults in a game."
+  fallenkingdom:
+    aliases: ["fk"]
+    description: "A command to manage the game."
