--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -97,6 +97,7 @@ team-messages:
 ###                CYCLES                 ###
 #############################################
 
+
 waiting-scoreboard:
   title: "&6&lFallenKingdom"
   lines:
@@ -109,6 +110,36 @@ waiting-scoreboard:
   state:
     waiting: "&cEn attente"
     starting: "&aDémarrage"
+
+
+game-scoreboard:
+  title: "&6&lFallenKingdom"
+  lines:
+    - "&6&m--------------------"
+    - " "
+    - "&6• &eEquipe&6: %team_name%"
+    - " "
+    - "&6• &ePvP&6: %pvp_state%"
+    - "&6• &eAssaults&6: %assaults_state%"
+    - " "
+    - "&6• &eTemps de jeu&6: %time%"
+    - " "
+    - "&6&m--------------------"
+  pvp-state:
+    enabled: "&a✔"
+    disabled: "&c✘"
+  assaults-state:
+    enabled: "&a✔"
+    disabled: "&c✘"
+  time:
+    use-short-units: true
+    format: "%day%%hour%%minute%%second%"
+    time-units:
+      day: "j"
+      hour: "h"
+      minute: "m"
+      second: "s"
+
 
 waiting-cycle:
   # All the settings of the cycle.
