--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -69,20 +69,43 @@ command-fk:
       player-removed: "&6%player% &ea été &cretiré &ede l'équipe %team_name%&e."
 
 
-# This section is about the pvp.
 pvp:
-  # Message sent to all the online players when pvp is enabled.
-  enabled: "&6>> &eLe pvp est désormais &aactivé&e."
-  # Message sent to all the online players when pvp is disabled.
-  disabled: "&6>> &eLe pvp est désormais &cdésactivé&e."
+  enabled:
+    message:
+      type: "MESSAGE"
+      text: "&6>> &eLe pvp est désormais &aactivé&e."
+    title:
+      type: "TITLE"
+      title: "&ePvP &aactivé"
+      subtitle: "&eRestez sur vos gardes !"
+  disabled:
+    message:
+      type: "MESSAGE"
+      text: "&6>> &eLe pvp est désormais &cdésactivé&e."
+    title:
+      type: "TITLE"
+      title: "&ePvP &cdésactivé"
+      subtitle: "&eReposez vous un peu !"
 
 
-# This section is about the assaults.
 assaults:
-  # Message sent to all the online players when assaults are enabled.
-  enabled: "&6>> &eLes assaults sont désormais &aautorisés&e."
-  # Message sent to all the online players when assaults are disabled.
-  disabled: "&6>> &eLes assaults sont désormais &cinterdits&e."
+  enabled:
+    message:
+      type: "MESSAGE"
+      text: "&6>> &eLes assaults sont désormais &aautorisés&e."
+    title:
+      type: "TITLE"
+      title: "&eAssaults &aactivés"
+      subtitle: "&ePréparez vos armes !"
+  disabled:
+    message:
+      type: "MESSAGE"
+      text: "&6>> &eLes assaults sont désormais &cdésactivés&e."
+    title:
+      type: "TITLE"
+      title: "&eAssaults &cdésactivés"
+      subtitle: "&eRangez vos armes !"
+
 
 
 # This section is about team messages.
