--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -247,6 +247,10 @@ capture-cycle:
         second: "s"
   displays: {}
 
+
+running-cycle:
+  displays: {}
+
 #############################################
 ###           GENERAL SETTINGS            ###
 #############################################
@@ -310,6 +314,9 @@ starting-cycle-duration: 1
 
 # Set 'true' if you want to allow friendly fire or else set 'false'.
 friendly-fire: false
+
+# The percentage of players needed to capture a base.
+catcher-percentage: 50
 
 #############################################
 ###             CHAT SETTINGS             ###
